// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render card properly 1`] = `
<div
  className="card"
>
  my card
</div>
`;

exports[`Card whith custom class should render card properly 1`] = `
<div
  className="card my classes"
>
  my card
</div>
`;
